slurm_output/hostname_48554788.out
  File "multithreading.py", line 76
    p=mp.Process(target=weights_serial,args=(msa,start_ind,end_ind,weights_file=weights_file))
                                                                               ^
SyntaxError: invalid syntax
